--- a/examples/scatter.html
+++ b/examples/scatter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -12,15 +12,51 @@
 	<link rel="stylesheet" href="../assets/style.css">
 	<link rel="stylesheet" href="../assets/style.css">
 
+	<!-- Animation Style -->
+
+	<style>
+		#chart {
+			margin-left: -40px;
+			height: 506px;
+		}
+
+		.axis path, .axis line {
+			fill: none;
+			stroke: #000;
+			shape-rendering: crispEdges;
+		}
+		.z.axis {
+			display: none;
+		}
+
+		.label {
+			fill: #777;
+		}
+
+		.year.label {
+			font: 500 100px "Helvetica Neue";
+			fill: #ddd;
+		}
+
+		.year.label.active {
+			fill: #aaa;
+		}
+
+		.overlay {
+			fill: none;
+			pointer-events: all;
+			cursor: ew-resize;
+		}
+
+	</style>
 </head>
 <body>
 	
-	<br>
-	<img src="../assets/mvc.png" width="500"/>
-
 	<script src="../lib/d3.js"></script>
+	<script src="../lib/jquery.min.js"></script>
 	<script src="../lib/three.min.js"></script>
 	<script src="../dist/d3to3.js"></script>
+
 	<ul class="panels">
 		<li>
 			<h2>D3</h2>
@@ -32,77 +68,158 @@
 		</li>
 	</ul>
 
-    <script src="scatter_data.js"></script>
+	<script type="text/javascript" src="scatter_data.js"></script>
 	<script type="text/javascript">
 
-		var margin = {top: 20, right: 20, bottom: 30, left: 40},
-			width  = 550 - margin.left - margin.right,
-			height = 250 - margin.top  - margin.bottom;
+		// Various accessors that specify the four dimensions of data to visualize.
 
-		nodes.forEach(function(d) {
-			d.Calories = +d.Calories;
-			d["Protein (g)"] = +d["Protein (g)"];
-		});
+		function x(d)      { return d.income;         }
+		function y(d)      { return d.lifeExpectancy; }
+		function z(d)      { return d.unemployment;   }
+		function radius(d) { return d.population;     }
+		function color(d)  { return d.region;         }
+		function key(d)    { return d.name;           }
 
-		// Setup x-Axis values
-		var xScale = d3.scale.linear().range([0, width]), 
-			xValue = function(d) { return d.Calories;        },
-			xMap   = function(d) { return xScale(xValue(d)); }, 
-			xAxis  = d3.svg.axis().scale(xScale).orient("bottom");
+		// Chart dimensions.
+		var margin = {top: 19.5, right: 19.5, bottom: 19.5, left: 39.5},
+			width = 600 - margin.right,
+			height = 350 - margin.top - margin.bottom;
+
+		// Various scales. These domains make assumptions of data, naturally.
+		var xScale = d3.scale.log().domain([300, 1e5]).range([0, width]),
+			yScale = d3.scale.linear().domain([10, 85]).range([height, 0]),
+			zScale = d3.scale.linear().domain([0, 5]).range([height, 0]),
+			radiusScale = d3.scale.sqrt().domain([0, 5e8]).range([0, 40]),
+			colorScale = d3.scale.category10();
+
+		// The x & y axes.
+		var xAxis = 
+			d3.svg.axis()
+			.orient("bottom")
+			.scale(xScale)
+			.ticks(12, d3.format(",d"));
 		
-		
-		// Setup y-Axis values
-		var yScale = d3.scale.linear().range([height, 0]), 
-			yValue = function(d) { return d["Protein (g)"];  }, 
-			yMap   = function(d) { return yScale(yValue(d)); }, 
-			yAxis  = d3.svg.axis().scale(yScale).orient("left");
+		var	yAxis = 
+			d3.svg.axis()
+			.scale(yScale)
+			.orient("left");
 
-		// Setup radius values
-		var rMap   = function(d) { return d["radius"]; };
+		var	zAxis = 
+			d3.svg.axis()
+			.scale(zScale);
 
-		// Setup Fill Color
-		var color = d3.scale.category10(),
-			cValue = function(d) { return d.Category; };
-	
 
-		// Append the graph
-		var svg = d3.select("#d3_panel")
-			.append("svg")
+		// Create the SVG container and set the origin.
+		var svg = 
+			d3.select("#d3_panel").append("svg")
 			.attr("width", width + margin.left + margin.right)
 			.attr("height", height + margin.top + margin.bottom)
 			.append("g")
 			.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-		
-		xScale.domain([d3.min(nodes, xValue)-1, d3.max(nodes, xValue)+1]);
-		yScale.domain([d3.min(nodes, yValue)-1, d3.max(nodes, yValue)+1]);
 
-		// X Axis
-		svg.append("g")	
+		// Add the x-axis.
+		svg.append("g")
 			.attr("class", "x axis")
+			.attr("transform", "translate(0," + height + ")")
 			.call(xAxis)
 			.d3to3().axis();
 
-		// Y Axis
+		// Add the y-axis.
 		svg.append("g")
 			.attr("class", "y axis")
 			.call(yAxis)
 			.d3to3().axis();
 
-		// Draw Circles
-		svg.selectAll()
-			.data(nodes)
+		// Add an x-axis label.
+		svg.append("text")
+			.attr("class", "x label")
+			.attr("text-anchor", "end")
+			.attr("x", width)
+			.attr("y", height - 6)
+			.text("income per capita, inflation-adjusted (dollars)")
+			.d3to3().text();
+
+		// Add a y-axis label.
+		svg.append("text")
+			.attr("class", "y label")
+			.attr("text-anchor", "end")
+			.attr("y", 6)
+			.attr("dy", ".75em")
+			.attr("transform", "rotate(-90)")
+			.text("life expectancy (years)")
+			.d3to3().text();
+
+		// A bisector since many nation's data is sparsely-defined.
+		var bisect = d3.bisector(function(d) { return d[0]; });
+
+		// Add a dot per nation. Initialize the data at 1800, and set the colors.
+		var dot = svg.append("g")
+			.attr("class", "dots")
+			.selectAll(".dot")
+			.data(interpolateData(2009))
 			.enter().append("circle")
-			.attr("r", rMap)
-			.attr("cx", xMap)
-			.attr("cy", yMap)
-			.style("fill", function(d) { return color(cValue(d));})
+			.attr("class", "dot")
+			.style("fill", function(d) { return colorScale(color(d)); })
+			.call(position)
+			.sort(order)
 			.d3to3().data();
+
+
+		// Add a title.
+		dot.append("title")
+			.text(function(d) { return d.name; });
+
+		// Positions the dots based on data.
+		function position(dot) {
+			dot
+			.attr("cx", function(d) { return xScale(x(d)); })
+			.attr("cy", function(d) { return yScale(y(d)); })
+			.attr("cz", function(d) { return zScale(z(d)); })
+			.attr("r", function(d) { return radiusScale(radius(d)); });
+		}
+
+		// Defines a sort order so that the smallest dots are drawn on top.
+		function order(a, b) {
+			return radius(b) - radius(a);
+		}
+
+
+		// Interpolates the dataset for the given (fractional) year.
+		function interpolateData(year) {
+			return window.nations.map(function(d) {
+				return {
+					name: d.name,
+					region: d.region,
+					income: interpolateValues(d.income, year),
+					population: interpolateValues(d.population, year),
+					lifeExpectancy: interpolateValues(d.lifeExpectancy, year),
+					unemployment: interpolateValues(d.unemployment, year)
+				};
+			});
+		}
+
+
+		// Finds (and possibly interpolates) the value for the specified year.
+		function interpolateValues(values, year) {
+			if (values != undefined && values[0]!= undefined && values[0][1]!= undefined  ){
+				return values[0][1];
+		} else {
+			return 0;
+		}
+			var i = bisect.left(values, year, 0, values.length - 1),
+				a = values[i];
+				if (i > 0) {
+					var b = values[i - 1],
+					t = (year - a[0]) / (b[0] - a[0]);
+					return a[1] * (1 - t) + b[1] * t;
+				}
+			return a[1];
+		}
 
 		d3to3.render({
 			'source': 'd3_panel',
 			'target': 'd3to3_panel'
-		})
-
+		});
 	</script>
 
 </body>
