--- a/examples/scatter_plot_animation.html
+++ b/examples/scatter_plot_animation.html
@@ -1,60 +1,38 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
-	<title>D3to3</title>
+	<title>D3to3 - Examples - Scatter Plot Animation </title>
 	<meta name="description" content="D3to3">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-	<!-- Styles -->
-	<link rel="stylesheet" href="../assets/reset.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="../assets/style.css">
-	<link rel="stylesheet" href="../assets/style.css">
-
-	<!-- Animation Style -->
-
 	<style>
-		#chart {
-			margin-left: -40px;
-			height: 506px;
-		}
-
-		.axis path, .axis line {
+		.axis path,
+		.axis line {
 			fill: none;
 			stroke: #000;
 			shape-rendering: crispEdges;
 		}
-
 		.label {
 			fill: #777;
 		}
-
 		.year.label {
-			font: 500 196px "Helvetica Neue";
-			fill: #ddd;
+			fill: #DDD;
 		}
-
 		.year.label.active {
-			fill: #aaa;
+			fill: #AAA;
 		}
-
 		.overlay {
 			fill: none;
 			pointer-events: all;
 			cursor: ew-resize;
 		}
-
 	</style>
 </head>
 <body>
-	
-	<script src="../lib/d3.js"></script>
-	<script src="../lib/jquery.min.js"></script>
-	<script src="../lib/stats.min.js"></script>
-	<script src="../lib/three.min.js"></script>
-	<script src="../dist/d3to3.js"></script>
-
 	<ul class="panels">
 		<li>
 			<h2>D3</h2>
@@ -65,33 +43,50 @@
 			<div id="d3to3_panel"></div>
 		</li>
 	</ul>
-
-	<script type="text/javascript" src="animation_data.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/70/three.min.js"></script>
+	<script src="../dist/d3to3.js"></script>
+	<script type="text/javascript" src="data/animation.js"></script>
 	<script type="text/javascript">
 
 		// Setup Stats
-
 		var stats = new Stats();
-			stats.setMode(0);
-		
-		$("#d3_panel").append(stats.domElement);
-
 		var stats2 = new Stats();
-			stats2.setMode(0);
-
+		stats.setMode(0);
+		stats2.setMode(0);
+		$("#d3_panel").append(stats.domElement);
 		$("#d3to3_panel").append(stats2.domElement);
 
-
 		// Various accessors that specify the four dimensions of data to visualize.
+		function x(d) {
+			return d.income;
+		}
 
-		function x(d)      { return d.income;         }
-		function y(d)      { return d.lifeExpectancy; }
-		function radius(d) { return d.population;     }
-		function color(d)  { return d.region;         }
-		function key(d)    { return d.name;           }
+		function y(d) {
+			return d.lifeExpectancy;
+		}
+
+		function radius(d) {
+			return d.population;
+		}
+
+		function color(d) {
+			return d.region;
+		}
+
+		function key(d) {
+			return d.name;
+		}
 
 		// Chart dimensions.
-		var margin = {top: 19.5, right: 19.5, bottom: 19.5, left: 39.5},
+		var margin = {
+				top: 19.5,
+				right: 19.5,
+				bottom: 19.5,
+				left: 39.5
+			},
 			width = 600 - margin.right,
 			height = 350 - margin.top - margin.bottom;
 
@@ -102,19 +97,19 @@
 			colorScale = d3.scale.category10();
 
 		// The x & y axes.
-		var xAxis = 
+		var xAxis =
 			d3.svg.axis()
 			.orient("bottom")
 			.scale(xScale)
 			.ticks(12, d3.format(",d")),
-		
-			yAxis = 
+
+			yAxis =
 			d3.svg.axis()
 			.scale(yScale)
 			.orient("left");
 
 		// Create the SVG container and set the origin.
-		var svg = 
+		var svg =
 			d3.select("#d3_panel").append("svg")
 			.attr("width", width + margin.left + margin.right)
 			.attr("height", height + margin.top + margin.bottom)
@@ -154,7 +149,9 @@
 			.d3to3().text();
 
 		// A bisector since many nation's data is sparsely-defined.
-		var bisect = d3.bisector(function(d) { return d[0]; });
+		var bisect = d3.bisector(function(d) {
+			return d[0];
+		});
 
 		// Add a dot per nation. Initialize the data at 1800, and set the colors.
 		var dot = svg.append("g")
@@ -163,14 +160,17 @@
 			.data(interpolateData(1800))
 			.enter().append("circle")
 			.attr("class", "dot")
-			.style("fill", function(d) { return colorScale(color(d)); })
+			.style("fill", function(d) {
+				return colorScale(color(d));
+			})
 			.call(position)
 			.sort(order);
 
-
 		// Add a title.
 		dot.append("title")
-			.text(function(d) { return d.name; });
+			.text(function(d) {
+				return d.name;
+			});
 
 		var overlay = svg.append("rect")
 			.attr("class", "overlay")
@@ -187,9 +187,15 @@
 		// Positions the dots based on data.
 		function position(dot) {
 			dot
-			.attr("cx", function(d) { return xScale(x(d)); })
-			.attr("cy", function(d) { return yScale(y(d)); })
-			.attr("r", function(d) { return radiusScale(radius(d)); });
+				.attr("cx", function(d) {
+					return xScale(x(d));
+				})
+				.attr("cy", function(d) {
+					return yScale(y(d));
+				})
+				.attr("r", function(d) {
+					return radiusScale(radius(d));
+				});
 		}
 
 		// Defines a sort order so that the smallest dots are drawn on top.
@@ -198,43 +204,41 @@
 		}
 
 		// After the transition finishes, you can mouseover to change the year.
-
-		var startYear = 1800*2;	
-
+		var startYear = 1800 * 2;
 		d3to3.baseData({
 			'data': dot,
 			'source': 'd3_panel',
 			'target': 'd3to3_panel',
 		});
 
-		
-		setInterval(function(){
-
-			if (startYear >= (2009*2))
+		setInterval(function() {
+			if (startYear >= (2009 * 2)) {
 				return;
+			}
 
 			stats.begin();
-			displayYear(startYear/2);
-			startYear = startYear+1;
+			displayYear(startYear / 2);
+			startYear = startYear + 1;
 			stats.end();
 
-		}, 2000 / 60 );
-
+		}, 2000 / 60);
 
 		// Tweens the entire chart by first tweening the year, and then the data.
 		// For the interpolated data, the dots and label are redrawn.
 		function tweenYear() {
 			var year = d3.interpolateNumber(1800, 2009);
-			return  function(t) { displayYear(year(t)); };
+			return function(t) {
+				displayYear(year(t));
+			};
 		}
 
 		// Updates the display to show the specified year.
 		function displayYear(year) {
-			
+
 			dot.data(interpolateData(year), key).call(position).sort(order);
 
 			d3to3.updateData({
-				'data' : dot,
+				'data': dot,
 				'source': 'd3_panel',
 				'target': 'd3to3_panel',
 			});
@@ -253,27 +257,22 @@
 			});
 		}
 
-
 		// Finds (and possibly interpolates) the value for the specified year.
 		function interpolateValues(values, year) {
 			var i = bisect.left(values, year, 0, values.length - 1),
 				a = values[i];
-				if (i > 0) {
-					var b = values[i - 1],
+			if (i > 0) {
+				var b = values[i - 1],
 					t = (year - a[0]) / (b[0] - a[0]);
-					return a[1] * (1 - t) + b[1] * t;
-				}
+				return a[1] * (1 - t) + b[1] * t;
+			}
 			return a[1];
 		}
-
-		
 
 		d3to3.render({
 			'source': 'd3_panel',
 			'target': 'd3to3_panel',
 		});
-
 	</script>
-
 </body>
 </html>
